--- a/test/dummy/config/solid_queue.yml
+++ b/test/dummy/config/solid_queue.yml
@@ -7,6 +7,11 @@ default: &default
   dispatchers:
     - polling_interval: 1
       batch_size: 500
+      recurring_tasks:
+        periodic-add-to-buffer:
+          class: AddToBufferJob
+          args: 42
+          schedule: every second
 
 development:
   <<: *default
